@@ -1402,6 +1402,43 @@ name|alias
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// Create an environment variable that uniquely identifies this script operator
+name|String
+name|idEnvVarName
+init|=
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|hconf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVESCRIPTIDENVVAR
+argument_list|)
+decl_stmt|;
+name|String
+name|idEnvVarVal
+init|=
+name|this
+operator|.
+name|getOperatorId
+argument_list|()
+decl_stmt|;
+name|env
+operator|.
+name|put
+argument_list|(
+name|safeEnvVarName
+argument_list|(
+name|idEnvVarName
+argument_list|)
+argument_list|,
+name|idEnvVarVal
+argument_list|)
+expr_stmt|;
 name|scriptPid
 operator|=
 name|pb
